--- a/index.html
+++ b/index.html
@@ -3,58 +3,288 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Mapbox with Animated SVG Markers</title>
+    <title>Dashboard Attacks</title>
+    <script src="https://cdn.jsdelivr.net/npm/@supabase/supabase-js@2.45.4/dist/umd/supabase.min.js"></script>
     <script src="https://api.mapbox.com/mapbox-gl-js/v2.15.0/mapbox-gl.js"></script>
-    <link href="https://api.mapbox.com/mapbox-gl-js/v2.15.0/mapbox-gl.css" rel="stylesheet" />
+    <link href="https://api.mapbox.com/mapbox-gl-js/v2.15.0/mapbox-gl.css" rel="stylesheet">
     <style>
-        body { margin: 0; padding: 0; }
-        #map { position: absolute; top: 0; bottom: 0; width: 100%; }
+        body {
+            margin: 0;
+            padding: 0;
+        }
+
+        h2, h3, h4 {
+            margin: 0 0 10px 0;
+            padding: 0;
+        }
+
+        h2, h3 {
+            text-align: center;
+        }
+
+        p {
+            margin: 0 0 7px 0;
+            padding: 0;
+            text-align: center;
+        }
+
+        #map {
+            position: absolute;
+            top: 0;
+            bottom: 0;
+            width: 100%;
+        }
+
+        /* Styling for the info box */
+        #info-box {
+            position: absolute;
+            bottom: 40px;
+            left: 10px;
+            background-color: rgba(255, 255, 255, 1);
+            padding: 10px;
+            border-radius: 5px;
+            font-family: Arial, sans-serif;
+            font-size: 12px;
+            z-index: 1;
+            visibility: hidden;
+        }
+
+        /* Styling for the legend */
+        #legend {
+            margin-top: 10px;
+            padding: 0;
+            list-style: none;
+        }
+
+        #legend li {
+            display: flex;
+            align-items: center;
+            margin-bottom: 5px;
+        }
+
+        .legend-color {
+            width: 15px;
+            height: 15px;
+            margin-right: 10px;
+            border-radius: 50%;
+        }
     </style>
 </head>
 <body>
 
 <div id="map"></div>
+<!-- Box for displaying dynamic info and the legend -->
+<div id="info-box"></div>
 
 <script>
-  // Your Mapbox access token
-  mapboxgl.accessToken = 'pk.eyJ1Ijoid2lsbGNhcnRlciIsImEiOiJjaWdjdHdkNzYwZGp3dTVtMGhhY2ZkaDloIn0.9qTtVfFnKXVe82B-6mJbqQ';
+    // Define colors for each aws_region
+    const regionColors = {
+        "ap-northeast-1": "#FF5733",  // Red-Orange
+        "ap-northeast-2": "#33FF57",  // Lime Green
+        "ap-northeast-3": "#3357FF",  // Blue
+        "ap-south-1": "#FFC300",      // Yellow
+        "ap-southeast-1": "#FF33A8",  // Pink
+        "ap-southeast-2": "#33FFF6",  // Cyan
+        "ca-central-1": "#FF8C33",    // Orange
+        "eu-central-1": "#57FF33",    // Light Green
+        "eu-north-1": "#C70039",      // Crimson
+        "eu-west-1": "#33A8FF",       // Light Blue
+        "eu-west-2": "#8C33FF",       // Purple
+        "eu-west-3": "#FF5733",       // Red-Orange
+        "sa-east-1": "#FF5733",       // Red-Orange
+        "us-east-1": "#33FF57",       // Lime Green
+        "us-east-2": "#3357FF",       // Blue
+        "us-west-1": "#FF33A8",       // Pink
+        "us-west-2": "#33FFF6"        // Cyan
+    };
 
-  // Initialize the map
-  const map = new mapboxgl.Map({
-    container: 'map',  // container ID
-    style: 'mapbox://styles/mapbox/streets-v11',  // style URL
-    center: [-104.9903, 39.7392],  // starting position [lng, lat] (Denver, CO)
-    zoom: 10  // starting zoom
-  });
-
-  // Animated SVG code
-  const animatedSVG = `
-        <svg width="50" height="50" viewBox="0 0 40 40" xmlns="http://www.w3.org/2000/svg">
-            <circle cx="20" cy="20" fill="none" r="10" stroke="#FF0000" stroke-width="2">
-                <animate attributeName="r" from="8" to="20" dur=".5s" begin="0s" repeatCount="20"/>
-                <animate attributeName="opacity" from="1" to="0" dur=".5s" begin="0s" repeatCount="20"/>
+    // Define getDot function to create dynamic SVG markers
+    function getDot(dotWidth, dotHeight, color, opacity, dotVisibilityDuration) {
+        return `
+        <svg width="${dotWidth}" height="${dotHeight}" viewBox="0 0 ${dotWidth * 2} ${dotHeight * 2}" xmlns="http://www.w3.org/2000/svg">
+            <circle cx="${dotWidth}" cy="${dotHeight}" fill="none" r="${dotWidth / 2}" stroke="${color}" stroke-width="2" opacity="${opacity}">
+                <animate attributeName="r" from="${dotWidth / 2 - 2}" to="${dotWidth}" dur=".5s" begin="0s" repeatCount="3"/>
+                <animate attributeName="opacity" from=".75" to="0" dur=".5s" begin="${dotVisibilityDuration}s" fill="freeze"/> <!-- Fades out after 1.5s (3 cycles) -->
             </circle>
-            <circle cx="20" cy="20" fill="#FF0000" r="10"/>
+            <circle cx="${dotWidth}" cy="${dotHeight}" fill="${color}" r="${dotWidth / 2}" opacity="${opacity}">
+                <animate attributeName="opacity" from=".75" to="0" dur=".5s" begin="${dotVisibilityDuration}s" fill="freeze"/> <!-- Static dot also fades out -->
+            </circle>
         </svg>
     `;
+    }
 
-  // Function to create an animated SVG marker
-  function createAnimatedMarker(lng, lat) {
-    const el = document.createElement('div');
-    el.innerHTML = animatedSVG;
-    el.style.width = '50px';  // Adjust marker size
-    el.style.height = '50px'; // Adjust marker size
+    const supabasePublicClient = supabase.createClient(
+        "https://nkjtbfnflacztaicncym.supabase.co",
+        "eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.eyJpc3MiOiJzdXBhYmFzZSIsInJlZiI6Im5ranRiZm5mbGFjenRhaWNuY3ltIiwicm9sZSI6ImFub24iLCJpYXQiOjE3Mjc5MDI0ODEsImV4cCI6MjA0MzQ3ODQ4MX0.QXDXvKfqj-J-vpCLMDVyg1Lpea1t6K08CdxVWbGG710"
+    );
 
-    // Add the marker to the map
-    new mapboxgl.Marker(el)
-      .setLngLat([lng, lat])
-      .addTo(map);
-  }
+    mapboxgl.accessToken = 'pk.eyJ1Ijoid2lsbGNhcnRlciIsImEiOiJjaWdjdHdkNzYwZGp3dTVtMGhhY2ZkaDloIn0.9qTtVfFnKXVe82B-6mJbqQ';
+    const map = new mapboxgl.Map({
+        container: 'map',
+        style: 'mapbox://styles/mapbox/satellite-v9', // Use satellite style
+        center: [0, 25],
+        zoom: 1.7
+    });
 
-  // Add three markers around Denver, CO
-  createAnimatedMarker(-104.9903, 39.7392);  // Marker 1: Denver center
-  createAnimatedMarker(-105.1019, 39.7294);  // Marker 2: West of Denver
-  createAnimatedMarker(-104.8719, 39.7494);  // Marker 3: East of Denver
+    map.addControl(new mapboxgl.NavigationControl());
+
+    const minDotSize = 30;
+    const maxDotSize = 500;
+    const dotOpacity = .7;
+    const dotVisibilityDurationSecs = 1.5;
+    const dayCycleDelayMillis = 1500;
+
+    let runningTotal = 0;
+    let firstDate = '';
+    let maxAttacksDay = { date: '', numberOfAttacks: 0 }; // Track the most attacked day
+
+    // Function to dynamically calculate dot size based on number of attacks
+    function calculateDotSize(count, minAttacks, maxAttacks) {
+        const range = maxDotSize - minDotSize;
+        if (maxAttacks === minAttacks) return minDotSize;
+        return minDotSize + ((count - minAttacks) / (maxAttacks - minAttacks)) * range;
+    }
+
+    // Function to add attack point marker with dynamic size and region-based color
+    function addAttackPoint(lng, lat, count, aws_region, minAttacks, maxAttacks) {
+        const dotSize = calculateDotSize(count, minAttacks, maxAttacks);
+        const regionColor = regionColors[aws_region] || '#FFFFFF'; // Default to white if region is unknown
+        const el = document.createElement('div');
+        el.className = 'animated-marker';
+        el.innerHTML = getDot(dotSize, dotSize, regionColor, dotOpacity, dotVisibilityDurationSecs); // Use getDot function with dynamic size and color
+        new mapboxgl.Marker(el)
+            .setLngLat([lng, lat])
+            .addTo(map);
+    }
+
+    // Helper function to group attacks by day, location, and aws_region
+    function groupByDayLocationRegion(attacks) {
+        return attacks.reduce((group, attack) => {
+            const eventDate = new Date(attack.eventtime).toISOString().split('T')[0];
+            const locationKey = `${eventDate}-${attack.ip_latitude}-${attack.ip_longitude}-${attack.aws_region}`; // Unique key for each day + location + region
+            if (!group[locationKey]) {
+                group[locationKey] = { count: 0, latitude: attack.ip_latitude, longitude: attack.ip_longitude, aws_region: attack.aws_region, date: eventDate };
+            }
+            group[locationKey].count += 1;
+            return group;
+        }, {});
+    }
+
+    // Helper function to format the date in MM-DD-YYYY format
+    function formatDate(dateStr) {
+        const date = new Date(dateStr);
+        return `${String(date.getMonth() + 1).padStart(2, '0')}/${String(date.getDate()).padStart(2, '0')}/${date.getFullYear()}`;
+    }
+
+    const infoBox = document.getElementById('info-box');
+
+    // Update the info box
+    function updateInfoBox(attacksToday, runningTotal, currentDate, firstDate) {
+        if (infoBox.style.visibility !== 'visible') {
+            infoBox.style.visibility = 'visible';
+        }
+
+        const formattedCurrentDate = formatDate(currentDate);
+        const formattedFirstDate = formatDate(firstDate);
+        const attacksTodayText = attacksToday === 1
+            ? `<strong>1</strong> attack`
+            : `<strong>${attacksToday}</strong> attacks`;
+
+        // Create the legend dynamically
+        let legendHTML = '<h4>AWS Region attacked:</h4><ul id="legend">';
+        Object.entries(regionColors).forEach(([region, color]) => {
+            legendHTML += `
+                <li><div class="legend-color" style="background-color: ${color};"></div> ${region}</li>
+            `;
+        });
+        legendHTML += '</ul>';
+
+        infoBox.innerHTML = `
+        <h2>Attacks since ${formattedFirstDate}</h2>
+        <h2>${formattedCurrentDate} - ${attacksTodayText}</h2>
+        <p>Running total: <strong>${runningTotal}</strong> attacks.</p>
+        <p>Strongest attack: ${formatDate(maxAttacksDay.date)} (<strong>${maxAttacksDay.numberOfAttacks}</strong> attacks)</p>
+        <hr/>
+        ${legendHTML}
+    `;
+    }
+
+    // Fetch attack data from Supabase in batches
+    async function fetchAllAttacks() {
+        let allAttacks = [];
+        let batchSize = 1000;
+        let fromIndex = 0;
+        let toIndex = batchSize - 1;
+        let moreData = true;
+
+        while (moreData) {
+            let { data: attacksBatch, error } = await supabasePublicClient
+                .from('attack')
+                .select("eventtime,aws_acct,aws_region,ip_addr,ip_country,ip_region,ip_latitude,ip_longitude")
+                .range(fromIndex, toIndex);
+
+            if (error) {
+                console.error('Error fetching attacks:', error);
+                break;
+            }
+
+            if (attacksBatch.length > 0) {
+                allAttacks = allAttacks.concat(attacksBatch);
+            }
+
+            if (attacksBatch.length < batchSize) {
+                moreData = false;
+            } else {
+                fromIndex += batchSize;
+                toIndex += batchSize;
+            }
+        }
+
+        return allAttacks;
+    }
+
+    // Main function to fetch and display attacks
+    async function fetchAttacks() {
+        const allAttacks = await fetchAllAttacks();
+
+        if (allAttacks.length === 0) {
+            console.error('No attacks fetched.');
+            return;
+        }
+
+        // Group attacks by day, location, and aws_region
+        const groupedAttacks = groupByDayLocationRegion(allAttacks);
+        const attacksArray = Object.values(groupedAttacks);
+
+        // Calculate the min and max number of attacks to determine dot sizes
+        const minAttacks = Math.min(...attacksArray.map(attack => attack.count));
+        const maxAttacks = Math.max(...attacksArray.map(attack => attack.count));
+
+        // Get all distinct days
+        const distinctDays = [...new Set(attacksArray.map(attack => attack.date))].sort();
+        firstDate = distinctDays[0];
+
+        // Loop through each distinct day with a delay
+        distinctDays.forEach((day, index) => {
+            setTimeout(() => {
+                const attacksForDay = attacksArray.filter(attack => attack.date === day);
+                runningTotal += attacksForDay.reduce((total, attack) => total + attack.count, 0);
+
+                const attacksToday = attacksForDay.reduce((total, attack) => total + attack.count, 0);
+                if (attacksToday > maxAttacksDay.numberOfAttacks) {
+                    maxAttacksDay = { date: day, numberOfAttacks: attacksToday };
+                }
+
+                updateInfoBox(attacksToday, runningTotal, day, firstDate);
+
+                attacksForDay.forEach(attack => {
+                    addAttackPoint(attack.longitude, attack.latitude, attack.count, attack.aws_region, minAttacks, maxAttacks);
+                });
+            }, index * dayCycleDelayMillis);
+        });
+    }
+
+    fetchAttacks();
 </script>
 
 </body>
